# advent2020-challenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
day-00-template/: desc.txt
day-00-template/src/: main.cpp
day-01-puzzle-1/: CMakeLists.txt  desc.txt
day-01-puzzle-1/src/: main.cpp
day-01-puzzle-2/: CMakeLists.txt
day-01-puzzle-2/src/: main.cpp
day-02-puzzle-1/: CMakeLists.txt
day-02-puzzle-1/src/: main.cpp
day-02-puzzle-2/: CMakeLists.txt
day-02-puzzle-2/src/: main.cpp
day-03-puzzle-1/: CMakeLists.txt  desc.txt
day-03-puzzle-1/src/: main.cpp
day-03-puzzle-2/: CMakeLists.txt  desc.txt
day-03-puzzle-2/src/: main.cpp
day-04-puzzle-1/: CMakeLists.txt
day-04-puzzle-1/src/: main.cpp
day-04-puzzle-2/: CMakeLists.txt  desc.txt
day-04-puzzle-2/src/: main.cpp
day-05-puzzle-1/: CMakeLists.txt
day-05-puzzle-1/src/: main.cpp
day-05-puzzle-2/: CMakeLists.txt
day-05-puzzle-2/src/: main.cpp
utils/: CMakeLists.txt
utils/include/utilslib/: FileLoader.h  StringHelper.h
utils/src/: FileLoader.cpp  StringHelper.cpp
