cmake_minimum_required(VERSION 3.17)

set(CMAKE_CXX_STANDARD 14)

project(advent2020_challenge)

#set(CMAKE_VERBOSE_MAKEFILE 1)

add_subdirectory(utils)
add_subdirectory(day-01-puzzle-1)
add_subdirectory(day-01-puzzle-2)
add_subdirectory(day-02-puzzle-1)
add_subdirectory(day-02-puzzle-2)
add_subdirectory(day-03-puzzle-1)
add_subdirectory(day-03-puzzle-2)
add_subdirectory(day-04-puzzle-1)
add_subdirectory(day-04-puzzle-2)

